Override component values with xml. Better for customizations

--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -10,6 +10,11 @@
                                 <item name="component" xsi:type="string">
                                     Ozzytop_FreeShippingPromo/js/free-shipping-banner
                                 </item>
+                                <item name="config" xsi:type="array">
+                                    <item name="message" xsi:type="string">
+                                        Free Shipping Message from Xml
+                                    </item>
+                                </item>
                             </item>
                         </item>
                     </argument>
