Adding Computed property and changing text according to the subtotal

--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -11,9 +11,9 @@
                                     Ozzytop_FreeShippingPromo/js/free-shipping-banner
                                 </item>
                                 <item name="config" xsi:type="array">
-                                    <item name="message" xsi:type="string">
-                                        Free Shipping Message from Xml
-                                    </item>
+                                    <item name="messageDefault" xsi:type="string">Free Shipping on orders over 100! 😀</item>
+                                    <item name="messageItemsInCart" xsi:type="string">You are $XX.XX away FREE shipping! 😱</item>
+                                    <item name="messageFreeShipping" xsi:type="string">Your order now has FREE shipping! 🥳</item>
                                 </item>
                             </item>
                         </item>
